fixed overlapping nav

--- a/stylesheets/mystyle.css
+++ b/stylesheets/mystyle.css
@@ -9,6 +9,7 @@ body {
     position: relative;
     margin: 0px;
     float: center;
+    z-index: 0.5;
 }
 
 .nav {
